Add all base content except for the contact info

--- a/faqs.html
+++ b/faqs.html
@@ -130,7 +130,7 @@
                                                         <p>
                                                             <b>Smartphone (owned by the participant) with MijnEetMeter installed</b>
                                                             <br>
-                                                            Any smartphone able to have <a href="https://mijn.voedingscentrum.nl/nl/eetmeter/">MijnEetMeter</a> installed can be used.
+                                                            Any smartphone able to have <a href="https://mijn.voedingscentrum.nl/nl/eetmeter/" target="_blank">MijnEetMeter</a> installed can be used.
                                                         </p>
                                                     </div>
                                                 </div>
@@ -293,7 +293,11 @@
                                                     <div class="card-body">
                                                         <div class="card-text">
                                                             <p>
-                                                                If the watch is turned off, you can turn it on again by pressing the <b>Home</b> for a few seconds. Then, just follow the steps already explained in:
+                                                                If the watch is turned off, you can turn it on again by pressing the <b>Home</b> for a few seconds. Then, just follow the daily steps previously explained.
+                                                            </p>
+                                                            <p style="display: flex; align-items: center;">
+                                                                <b>See&nbsp</b>
+                                                                <span class="material-icons">&#xe5db;</span>
                                                             </p>
                                                             <button class="btn btn-dark" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                                                 <a>What are the steps to follow when wearing the smartwatch daily?</a>
@@ -469,7 +473,13 @@
                                                 <div id="em-collapseThree" class="collapse" aria-labelledby="em-headingThree" data-parent="#accordion">
                                                     <div class="card-body">
                                                         <div class="card-text">
-                                                            <p>TODO</p>
+                                                            <p>
+                                                                If not yet installed in your smartphone, download the app for free in the <a href="https://itunes.apple.com/nl/app/mijn-eetmeter/id663382012?mt=8" target="_blank">App store</a> and <a href="https://play.google.com/store/apps/details?id=nl.voedingscentrum.eetmeter&hl=nl" target="_blank">Play Store</a>.
+                                                                <br>
+                                                                <span class="material-icons">&#xe002;</span>
+                                                                You can use the <a href="https://mijn.voedingscentrum.nl/nl/login/" target="_blank">website</a> and the app side by side. Everything you enter in the app also appears in your diary on the website and vice versa.
+                                                                For that use the same account (user and password) provided to you.
+                                                            </p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -486,7 +496,16 @@
                                                 <div id="fsl-collapseOne" class="collapse" aria-labelledby="fsl-headingOne" data-parent="#accordion">
                                                     <div class="card-body">
                                                         <div class="card-text">
-                                                            <p>TODO</p>
+                                                            <p>
+                                                                In cases such as this, please contact the DiaGame members using the contact info provided to you.
+                                                            </p>
+                                                            <p style="display: flex; align-items: center;">
+                                                                <b>See&nbsp</b>
+                                                                <span class="material-icons">&#xe5db;</span>
+                                                            </p>
+                                                            <button class="btn btn-dark" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                                                <a>How to contact the DiaGame members able to help with issues/difficulties?</a>
+                                                            </button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -504,7 +523,18 @@
                                                 <div id="sw-fsl-collapseOne" class="collapse" aria-labelledby="sw-fsl-headingOne" data-parent="#accordion">
                                                     <div class="card-body">
                                                         <div class="card-text">
-                                                            <p>TODO</p>
+                                                            <p>
+                                                                Yes. As a rule of thumb, all activities from your routine should be done while using the devices.
+                                                                <br>
+                                                                When in doubt, please contact the DiaGame team members for clarification if it seems to you that the activity can interfere somehow the flow of experiment or device functions.
+                                                            </p>
+                                                            <p style="display: flex; align-items: center;">
+                                                                <b>See&nbsp</b>
+                                                                <span class="material-icons">&#xe5db;</span>
+                                                            </p>
+                                                            <button class="btn btn-dark" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                                                <a>How to contact the DiaGame members able to help with issues/difficulties?</a>
+                                                            </button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -521,7 +551,9 @@
                                                 <div id="gen-collapseFour" class="collapse" aria-labelledby="gen-headingFour" data-parent="#accordion">
                                                     <div class="card-body">
                                                         <div class="card-text">
-                                                            <p>TODO</p>
+                                                            <p>
+                                                                If any information is logged wrong, please use the provided notebook (paper) to register the right information.
+                                                            </p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -538,7 +570,16 @@
                                                 <div id="gen-collapseTwo" class="collapse" aria-labelledby="gen-headingTwo" data-parent="#accordion">
                                                     <div class="card-body">
                                                         <div class="card-text">
-                                                            <p>TODO</p>
+                                                            <p>
+                                                                Please contact the DiaGame team members and report what happened.
+                                                            </p>
+                                                            <p style="display: flex; align-items: center;">
+                                                                <b>See&nbsp</b>
+                                                                <span class="material-icons">&#xe5db;</span>
+                                                            </p>
+                                                            <button class="btn btn-dark" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                                                <a>How to contact the DiaGame members able to help with issues/difficulties?</a>
+                                                            </button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -552,7 +593,7 @@
                                                         </button>
                                                     </h5>
                                                 </div>
-                                                <div id="gen-collapseThree" class="collapse" aria-labelledby="gen-headingThree" data-parent="#accordion">
+                                                <div id="gen-collapseThree" class="collapse show" aria-labelledby="gen-headingThree" data-parent="#accordion">
                                                     <div class="card-body">
                                                         <div class="card-text">
                                                             <p>
@@ -560,6 +601,13 @@
                                                                 <br>
                                                                 If any doubt or questions comes to mind, please contact the DiaGame members to make sure your routines suit the experiment.
                                                             </p>
+                                                            <p style="display: flex; align-items: center;">
+                                                                <b>See&nbsp</b>
+                                                                <span class="material-icons">&#xe5db;</span>
+                                                            </p>
+                                                            <button class="btn btn-dark" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                                                <a>How to contact the DiaGame members able to help with issues/difficulties?</a>
+                                                            </button>
                                                         </div>
                                                     </div>
                                                 </div>
