Fix collapsed FAQ entry

--- a/faqs.html
+++ b/faqs.html
@@ -593,7 +593,7 @@
                                                         </button>
                                                     </h5>
                                                 </div>
-                                                <div id="gen-collapseThree" class="collapse show" aria-labelledby="gen-headingThree" data-parent="#accordion">
+                                                <div id="gen-collapseThree" class="collapse" aria-labelledby="gen-headingThree" data-parent="#accordion">
                                                     <div class="card-body">
                                                         <div class="card-text">
                                                             <p>
@@ -646,7 +646,8 @@
                                                             </p>
                                                             <iframe width="560" height="315" src="https://www.youtube.com/embed/XsbEnFAwma4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                             <p>
-                                                                <b>Note:</b> this video is not provided or made by DiaGame project members. All its content belongs to Mijn Voeding Centrum.
+                                                                <b>Note:</b> this video was not made by DiaGame project members.
+                                                                All its content belongs to Mijn Voeding Centrum.
                                                             </p>
                                                         </div>
                                                     </div>
