Add dutch version of FAQs

--- a/faqs.html
+++ b/faqs.html
@@ -54,7 +54,13 @@
                                     <!--
                                     <a class="nav-item nav-link" href="categories.html">Categories</a>
                                     -->
-                                    <a class="nav-item nav-link" href="faqs.html">FAQs</a>
+                                    <a class="nav-item nav-link" href="nl/faqs.html">
+                                        <div style="display: inline-flex; align-items: center;">
+                                            <img src="assets/icons/flag-netherlands.png">
+                                            &nbsp;
+                                            FAQs (Dutch)
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
                         </nav>
@@ -642,7 +648,7 @@
                                                     <div class="card-body">
                                                         <div class="card-text">
                                                             <p>
-                                                                A video from <a href="https://mijn.voedingscentrum.nl/nl/">Mijn Voeding Centrum</a> showcasing the Mijn Eetmeter smartphone application:
+                                                                A video from <a href="https://mijn.voedingscentrum.nl/nl/" target="_blank">Mijn Voeding Centrum</a> showcasing the Mijn Eetmeter smartphone application:
                                                             </p>
                                                             <iframe width="560" height="315" src="https://www.youtube.com/embed/XsbEnFAwma4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                             <p>
