--- a/nl/faqs.html
+++ b/nl/faqs.html
@@ -396,23 +396,20 @@
                                                                     Hierna ziet u een overzicht van de maaltijden die u op de geselecteerde datum heeft gegeten en hieronder een "Notitie" vak waar u de tijdstippen waarop u deze maaltijden gegeten heeft moet bijhouden.
                                                                     <br>
                                                                     Nadat u de maaltijd heeft ingevuld moet u het tijdstip waarop u deze maaltijd heeft gegeten (start van de maaltijd) invullen in het "Notitie" vak (staat onder de maaltijden die u heeft bijgehouden).
-                                                                    We raden de volgende indeling aan in het "Notitie" vak om de tijdstippen elke dag bij te houden (bijvoorbeeld, het kan zijn dat u bijvoorbeeld geen ontbijt heeft gegeten of geen tussendoortje heeft gepakt, u kunt deze regels dan weglaten):
+                                                                    We raden de volgende indeling (hebben wij voor u al in de app gezet) aan in het "Notitie" vak om de tijdstippen elke dag bij te houden (bijvoorbeeld, het kan zijn dat u bijvoorbeeld geen ontbijt heeft gegeten of geen tussendoortje heeft gepakt, u kunt deze regels dan weglaten of aangeven dat u dit niet gegeten heeft):
                                                                     <br>
                                                                     <br>
-                                                                    O: 07.00
+                                                                    Ontbijt: 07.00
                                                                     <br>
-                                                                    T1: 11.00
+                                                                    Tussendoor ochtend: 11.00
                                                                     <br>
-                                                                    L: 12.00
+                                                                    Lunch: 12.00
                                                                     <br>
-                                                                    T2: 15.00
+                                                                    Tussendoor middag: 15.00
                                                                     <br>
-                                                                    A: 18.00
+                                                                    Avondeten: 18.00
 								    <br>
-								    T3: 21.00
-                                                                    <br>
-								<br>
-								De afkortingen O, T1, L, T2, A, en T3 staan hierbij voor ontbijt, tussendoortje 1, lunch, tussendoortje 2, avondeten, en tussendoortje 3.
+								    Tussendoor avond: 21.00
                                                                     <br>
                                                                 </li>
                                                             </ol>
